# angel-sgdb

./: .gitignore  CMakeLists.txt  PopupManager.qml  ToastManager.qml  main.cpp  main.qml  qml.qrc  sqls.qrc
components/Angel/: AngelButton.qml  AngelButtonForm.ui.qml  AngelHeader.qml  AngelLoading.qml  AngelLoadingForm.ui.qml  AngelMenu.qml  AngelMenuItem.qml  AngelPopup.qml  AngelRectangle.qml  AngelTextField.qml  AngelTextFieldForm.ui.qml  AngelToast.qml  AngelToastForm.ui.qml  qmldir
components/AngelTheme/: AngelAnimation.qml  AngelColor.qml  AngelMetric.qml  qmldir
components/Screen/: DatabaseDataView.qml  DatabaseDataViewForm.ui.qml  KeyboardShortcutsModal.qml  KeyboardShortcutsModalForm.ui.qml  MenuBarCustom.qml  QueryPanel.qml  QueryPanelForm.ui.qml  QueryPanelManager.qml  QueryPanelManagerForm.ui.qml  TableDataView.qml  TableDataViewForm.ui.qml
components/connection/: ConnectionDatabase.qml
components/connection/database/: connectiondatabasemodel.cpp  connectiondatabasemodel.h
control/: basehandlercalls.cpp  basehandlercalls.h  chaincallshandler.cpp  chaincallshandler.h  connectiondatabasecontrol.cpp  connectiondatabasecontrol.h  control.cpp  control.h  handlercalls.cpp  handlercalls.h  mainscreencontrol.cpp  mainscreencontrol.h  querypanelcontrol.cpp  querypanelcontrol.h  screen.cpp  screen.h
control/database/: databasecontrol.cpp  databasecontrol.h
controller/: connectiondatabasecontroller.cpp  connectiondatabasecontroller.h  databasecontroller.cpp  databasecontroller.h  querycontroller.cpp  querycontroller.h
delegate/: connectiondatabasedelegate.cpp  connectiondatabasedelegate.h
model/connection/database/: connectiondatabasemodel.cpp  connectiondatabasemodel.h
model/database/: columnmodel.cpp  columnmodel.h  databasemodel.cpp  databasemodel.h  tablemodel.cpp  tablemodel.h
model/query/: querymodel.cpp  querymodel.h
repository/: databaserepository.cpp  databaserepository.h  queryrepository.cpp  queryrepository.h
service/: connectiondatabaseservice.cpp  connectiondatabaseservice.h  databaseservice.cpp  databaseservice.h  queryservice.cpp  queryservice.h
service/config/: applicationpropertiesservice.cpp  applicationpropertiesservice.h
service/exception/: serviceexception.cpp  serviceexception.h
sqls/: find_all_tables.sql
utils/: databasesingleton.cpp  databasesingleton.h  filehelper.cpp  filehelper.h  sqlqueryfile.cpp  sqlqueryfile.h  sqlrecordfile.cpp  sqlrecordfile.h  synctask.cpp  synctask.h
view/model/: tabledatamodel.cpp  tabledatamodel.h  tablequeryresultmodel.cpp  tablequeryresultmodel.h
view/model/text/: sqlsyntaxhighlighter.cpp  sqlsyntaxhighlighter.h  textdocumenthandlermodel.cpp  textdocumenthandlermodel.h
